--- a/DexMasterUI/Components/Display/PokemonUI/PokemonCard.razor
+++ b/DexMasterUI/Components/Display/PokemonUI/PokemonCard.razor
@@ -1,21 +1,14 @@
-@if (Pokemon != null)
+@if (PokemonSpecies != null)
 {
     <MudCard Outlined="true">
         <MudCardHeader>
             <CardHeaderAvatar>
                 <MudAvatar Color="Color.Dark" Variant="Variant.Filled">
-                    @PokemonId
+                    @PokemonSpecies.PokedexNumbers.Where(x => x.Pokedex.Name == Pokedex).Select(x => x.EntryNumber).FirstOrDefault()
                 </MudAvatar>
             </CardHeaderAvatar>
             <CardHeaderContent>
-                <MudText Typo="Typo.body1">@CommonFunctions.Capitalise(Pokemon.Name)</MudText>
-                <MudStack Row="true">
-                    <MudText Typo="Typo.body2">@CommonFunctions.Capitalise(Pokemon.Types[0].Type.Name)</MudText>
-                    @if (Pokemon.Types.Count > 1)
-                    {
-                        <MudText Typo="Typo.body2">@CommonFunctions.Capitalise(Pokemon.Types[1].Type.Name)</MudText>
-                    }
-                </MudStack>
+                <MudText Typo="Typo.body1">@CommonFunctions.Capitalise(PokemonSpecies.Name)</MudText>
             </CardHeaderContent>
             <CardHeaderActions>
                 <MudIconButton OnClick="@(OpenDrawer)" Icon="@Icons.Material.Filled.OpenInNew" Variant="Variant.Outlined" Color="Color.Primary"/>
@@ -52,28 +45,20 @@
            Width="40%">
     @if (_open)
     {
-        <PokemonSidebar Pokemon="@Pokemon"/>
+        <PokemonSidebar PokemonSpecies="@PokemonSpecies"/>
     }
 </MudDrawer>
 
 @code {
     [Parameter] 
-    public Pokemon Pokemon { get; set; }
-    [Parameter]
-    public int PokemonId { get; set; }
+    public PokemonSpecies PokemonSpecies { get; set; }
 
     [CascadingParameter] 
     public User LoggedInUser { get; set; }
     [CascadingParameter] 
-    public string VersionName { get; set; }
+    public string Pokedex { get; set; }
     
     private bool _open;
-    private string _pokemonTypes;
-
-    protected override void OnParametersSet()
-    {
-        _pokemonTypes = Pokemon.Types.Select(t => t.Type.Name).Aggregate((a, b) => $"{CommonFunctions.Capitalise(a)} / {CommonFunctions.Capitalise(b)}");
-    }
 
     private void OpenDrawer()
     {
