--- a/DexMasterUI/Pages/Items/ItemSearchPage.razor
+++ b/DexMasterUI/Pages/Items/ItemSearchPage.razor
@@ -1,6 +1,6 @@
-@page "/Pokemon/Search/{SearchText}"
+@page "/Item/Search/{SearchText}"
 
-<PokemonGrid SearchTerm="@SearchText" />
+<ItemTable SearchTerm="@SearchText" />
 
 @code {
     [Parameter]
