--- a/DexMasterUI/Pages/PokemonPages/PokemonGrid.razor
+++ b/DexMasterUI/Pages/PokemonPages/PokemonGrid.razor
@@ -39,44 +39,48 @@
     {
         <MudText>There was a problem fetching Pokemon</MudText>
     }
-    <MudPaper>
-        <MudGrid Class="d-flex align-center mud-width-full py-3">
-            <MudItem lg="1" xs="2"></MudItem>
-            <MudItem lg="1" xs="2"></MudItem>
-            <MudItem lg="8" xs="6">
-                <MudPagination Selected="_currentPage"
-                               Count="_totalPages"
-                               SelectedChanged="OnPageChanged"
-                               ShowFirstButton="true"
-                               ShowLastButton="true"
-                               BoundaryCount="2"
-                               MiddleCount="3"
-                               Class="justify-center mud-width-full"/>
-            </MudItem>
-            <MudItem lg="1" xs="2">
-                <MudNumericField Margin="Margin.Dense"
-                                 @bind-Value="_currentPage"
-                                 Min="1"
-                                 Max="_totalPages"
-                                 Variant="Variant.Outlined"
-                                 Label="Page"/>
-            </MudItem>
-            <MudItem lg="1" xs="2">
-                <MudSelect T="int"
-                           @bind-Value="_limit"
-                           Variant="Variant.Outlined"
-                           SelectedValuesChanged="@(() => OnPageChanged(_currentPage))"
-                           Margin="Margin.Dense"
-                           Label="Pkmn Per Page">
-                    <MudSelectItem Value="9"/>
-                    <MudSelectItem Value="12"/>
-                    <MudSelectItem Value="15"/>
-                    <MudSelectItem Value="30"/>
-                    <MudSelectItem Value="60"/>
-                </MudSelect>
-            </MudItem>
-        </MudGrid>
-    </MudPaper>
+    
+    @if (_limit > 0)
+    {
+        <MudPaper>
+            <MudGrid Class="d-flex align-center mud-width-full py-3">
+                <MudItem lg="1" xs="2"></MudItem>
+                <MudItem lg="1" xs="2"></MudItem>
+                <MudItem lg="8" xs="6">
+                    <MudPagination Selected="_currentPage"
+                                   Count="_totalPages"
+                                   SelectedChanged="OnPageChanged"
+                                   ShowFirstButton="true"
+                                   ShowLastButton="true"
+                                   BoundaryCount="2"
+                                   MiddleCount="3"
+                                   Class="justify-center mud-width-full"/>
+                </MudItem>
+                <MudItem lg="1" xs="2">
+                    <MudNumericField Margin="Margin.Dense"
+                                     @bind-Value="_currentPage"
+                                     Min="1"
+                                     Max="_totalPages"
+                                     Variant="Variant.Outlined"
+                                     Label="Page"/>
+                </MudItem>
+                <MudItem lg="1" xs="2">
+                    <MudSelect T="int"
+                               @bind-Value="_limit"
+                               Variant="Variant.Outlined"
+                               SelectedValuesChanged="@(() => OnPageChanged(_currentPage))"
+                               Margin="Margin.Dense"
+                               Label="Pkmn Per Page">
+                        <MudSelectItem Value="9"/>
+                        <MudSelectItem Value="12"/>
+                        <MudSelectItem Value="15"/>
+                        <MudSelectItem Value="30"/>
+                        <MudSelectItem Value="60"/>
+                    </MudSelect>
+                </MudItem>
+            </MudGrid>
+        </MudPaper>
+    }
 </MudStack>
 
 @code {
@@ -92,7 +96,6 @@
     private User _loggedInUser = null;
     private bool _isLoading = true;
     private int _totalPages = 1;
-    private int _totalPokemon;
 
     protected override async Task OnParametersSetAsync()
     {
@@ -111,13 +114,20 @@
     {
         _isLoading = true;
         
-        _pokemon = await pokeApiService.GetPokemonSpeciesPageFromPokedexAsync(_limit, (_currentPage-1) * _limit, _pokedex);
-        _totalPokemon = _pokedex.PokemonEntries.Count;
-
-        _totalPages = _limit == 0 ? 1 : (int)Math.Ceiling((double)_totalPokemon / _limit);
-
+        int pokemonEntriesCount;
+        if (string.IsNullOrWhiteSpace(SearchTerm) == false)
+        {
+            pokemonEntriesCount = _pokedex.PokemonEntries.Count(p => p.PokemonSpecies.Name.Contains(SearchTerm, StringComparison.OrdinalIgnoreCase));
+            _pokemon = await pokeApiService.SearchPokemonSpeciesPageFromPokedexAsync(_limit, (_currentPage - 1) * _limit, _pokedex, SearchTerm);
+        }
+        else
+        {
+            pokemonEntriesCount = _pokedex.PokemonEntries.Count;
+            _pokemon = await pokeApiService.GetPokemonSpeciesPageFromPokedexAsync(_limit, (_currentPage-1) * _limit, _pokedex);
+        }
+        
+        _totalPages = _limit == 0 ? 1 : (int)Math.Ceiling((double)pokemonEntriesCount / _limit);
         _isLoading = false;
-
         StateHasChanged();
     }
 
